--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,7 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'Spain: History for Young Readers'
 url: http://www.gutenberg.org/ebooks/47125
